--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Your Name - CSUN Personal Webpage</cvr94140>
+    <title>Carlos Rodriguez - CSUN Personal Webpage</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,14 +15,68 @@
             border-bottom: 2px solid #ccc;
             padding-bottom: 10px;
         }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 25px;
+        }
+        th, td {
+            border: 1px solid #ccc;
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            font-weight: bold;
+            background-color: #f2f2f2;
+        }
+        h2 {
+            margin-top: 30px;
+        }
     </style>
 </head>
 <body>
+
     <h1>Carlos Rodriguez</h1>
-    <p>Hello! My name is Carlos Rodriguez and this is my personal webpage hosted on the CSUN web server.</p>
+    <p>Hello! My name is Carlos Rodriguez and this is my personal webpage hosted using GitHub Pages.</p>
     <p>I am majoring in Information Systems (Health Systems). This webpage was created for my web development lab assignment.</p>
 
+    <h2>Courses I Took This Semester</h2>
+
+    <table>
+        <tr>
+            <th>Course Name</th>
+            <th>Section #</th>
+            <th>No. of Credits</th>
+            <th>Days of Class Meeting</th>
+        </tr>
+        <tr>
+            <td>ACCT 230 — Financial Accounting</td>
+            <td>13459</td>
+            <td>3</td>
+            <td>Mon / Wed</td>
+        </tr>
+        <tr>
+            <td>IS 312 — Systems & Technologies</td>
+            <td>12660</td>
+            <td>3</td>
+            <td>Mon / Wed</td>
+        </tr>
+        <tr>
+            <td>ANTH 310 — Language in Culture</td>
+            <td>18864</td>
+            <td>3</td>
+            <td>Mon / Wed</td>
+        </tr>
+        <tr>
+            <td>HSCI 336 — Health Ethics</td>
+            <td>13495</td>
+            <td>3</td>
+            <td>Mon / Wed</td>
+        </tr>
+    </table>
+
     <h2>Contact</h2>
-    <p>Email: carlos-mige.rodriguez.237@my.csun.edu</p>
+    <p>Email: carlos-migel.rodriguez.237@my.csun.edu</p>
+
 </body>
 </html>
