--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <h1>Carlos Rodriguez</h1>
     <p>Hello! My name is Carlos Rodriguez and this is my personal webpage!</p>
-    <p>I am majoring in Information Systems (Health Systems) at CSUN. I am from San Diego, CA and attended Santa Barbara City College where I finished my associated degree. I am curently looking for an internship for my major and want to go into the field of medical technology or pharmaceutical sales
+    <p>I am majoring in Information Systems (Health Systems) at CSUN. I am from San Diego, CA and attended Santa Barbara City College where I finished my associated degree. I am currently looking for an internship for my major and want to go into the field of medical technology or pharmaceutical sales
         .</p>
 
     <h2>Courses I Took This Semester</h2>
