--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 
     <h1>Carlos Rodriguez</h1>
     <p>Hello! My name is Carlos Rodriguez and this is my personal webpage!</p>
-    <p>I am majoring in Information Systems (Health Systems) at CSUN. I am from San Diego, CA and attended Santa Barbara City College where I finished my associates degree. I am currently looking for an internship for my major and want to go into the field of medical technology or pharmaceutical sales
-        .</p>
+    <p>I am majoring in Information Systems (Health Systems) at CSUN. I am from San Diego, CA and attended Santa Barbara City College where I finished my associates degree. I am currently looking for an internship for my major and want to go into the field of medical technology or pharmaceutical sales.</p>
 
     <h2>Courses I Took This Semester</h2>
 
@@ -78,6 +77,12 @@
 
     <h2>Contact</h2>
     <p>Email: carlos-migel.rodriguez.237@my.csun.edu</p>
+
+    <h2>PGP Public Key</h2>
+    <p>
+        You can download my public PGP key here:
+        <a href="carlos_rodriguez_public.asc">Download my public key</a>
+    </p>
 
 </body>
 </html>
