--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <h2>PGP Public Key</h2>
     <p>
         You can download my public PGP key here:
-        <a href="carlos_rodriguez_public.asc">Download my public key</a>
+        <a href="Carlos_Rodriguez_public.asc">Download my public key</a>
     </p>
 
 </body>
